[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/fonts/MainFont.tres" type="DynamicFontData" id=1]
[ext_resource path="res://resources/fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/main/MainScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -2500.0
margin_top = -2500.0
margin_right = 2500.0
margin_bottom = 2500.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -200.0
margin_right = 106.0
margin_bottom = -150.0
custom_fonts/font = ExtResource( 2 )
text = "Fliper"

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.5
margin_top = -49.5
margin_right = 81.5
margin_bottom = 49.5
custom_constants/separation = 15

[node name="HostServer" type="Button" parent="ButtonContainer"]
margin_right = 163.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 6 )
text = "host server"

[node name="FindServers" type="Button" parent="ButtonContainer"]
margin_top = 38.0
margin_right = 163.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 5 )
text = "find servers"

[node name="Exit" type="Button" parent="ButtonContainer"]
margin_top = 76.0
margin_right = 163.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 3 )
text = "Exit"

[connection signal="button_up" from="ButtonContainer/HostServer" to="." method="host_server_button_trigger"]
[connection signal="button_up" from="ButtonContainer/FindServers" to="." method="multiplayer_button_trigger"]
[connection signal="button_up" from="ButtonContainer/Exit" to="." method="exit_button_trigger"]
